tests/gpu_struct/compile-fail/usize_field.stderr
error: usize is platform-dependent (32 or 64 bit); use u32 or u64 for GPU ABI
 --> tests/gpu_struct/compile-fail/usize_field.rs:5:14
  |
5 |     pub len: usize,
  |              ^^^^^
